objects/Loan_Callout_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AuthURL_Production__c</fullName>
        <description>Auth URL used to launch user into respective Aurora project or design</description>
        <label>AuthURL_Production</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AuthURL_Sandbox__c</fullName>
        <description>Aurora Authentication Endpoint URL to launch user to respective Project or User</description>
        <label>AuthURL_Sandbox</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BackupUrl__c</fullName>
        <description>this field contains the backup url of this api which we need to call when the primary one is down for any reason. for the error code 4, we will call this</description>
        <label>BackupUrl</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackupZipCodeUrl__c</fullName>
        <description>this field contains the backup url of this api which we need to call when the primary one is down for any reason. for the error code 4, we will call this</description>
        <label>BackupZipCodeUrl</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <description>Store Client ID</description>
        <label>Client ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <description>Client Secret</description>
        <label>Client Secret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint_URL_Sandbox__c</fullName>
        <description>Using a different Endpoint URL for Sandbox</description>
        <label>Endpoint_URL_Sandbox</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Endpoint_URL__c</fullName>
        <description>Endpoint URL</description>
        <label>Endpoint URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <description>Stores Grant Type value need for Mosaic call outs</description>
        <label>Grant Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameSpace__c</fullName>
        <description>Namespace for Service Objects</description>
        <label>NameSpace</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Used for FinEng password</description>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_URI_Production__c</fullName>
        <description>Redirect URI for Aurora</description>
        <label>Redirect URI Production</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_URI_Sandbox__c</fullName>
        <description>Aurora Redirect URI</description>
        <label>Redirect URI Sandbox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRepEmail__c</fullName>
        <description>Sales Representative Email</description>
        <label>SalesRepEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Tenant_Id__c</fullName>
        <description>Used to Store Aurora Tenant ID</description>
        <label>Tenant Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserType_Internal__c</fullName>
        <description>Used to Construct Aurora Auth URL. Created for Aurora Design Integration Project</description>
        <label>UserType_Internal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserType_Partner__c</fullName>
        <description>Used to Construct Aurora Auth URL. Created for Aurora Design Integration Project</description>
        <label>UserType_Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Used for FinEng username</description>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCodeUrl__c</fullName>
        <description>this url is used to call service objects when we get Invalid address from the API call</description>
        <label>ZipCodeUrl</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Callout Settings</label>
</CustomObject>